--- a/src/main/webapp/schedule.html
+++ b/src/main/webapp/schedule.html
@@ -275,7 +275,7 @@
                 sRooms[i]['roomTypeId'] = sRooms[i]['id']
 			}
             d.OrderChildJSON =  JSON.stringify(sRooms);
-
+				console.info(d)
 
             var index = layer.load(1,{time:10*1000});
 
